[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"

[dev-dependencies]
anyhow = "1.0.98"
solana-client = "2.3.2"
solana-program-test = "2.3.2"
solana-sdk = "2.3.1"
tokio = "1.45.1"

[[example]]
name = "client"
path = "examples/client.rs"