[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
integer-sqrt = "0.1.5"
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
spl-associated-token-account = {version = "7.0.0", features = ["no-entrypoint"]}
spl-token = "8.0.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
solana-client = "2.3.3"
solana-sdk = "2.3.1"
tokio = "1.46.1"
