[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
thiserror = "2.0.12"

[dev-dependencies]
solana-client = "2.3.4"
solana-program-test = "2.3.4"
solana-sdk = "2.3.1"
